--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,10 @@
 {
   "manifest_version": "0.1",
   "version": "0.1",
-  "name": "Park Here",
-  "description": "PH",
-  "app_name": "PH",
-  "short_name": "PH",
+  "name": "Park Here Business",
+  "description": "PHB",
+  "app_name": "PHB",
+  "short_name": "PHB",
   "scope": "/",
   "start_url": "/",
   "theme_color": "#ffffff",
